--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="SportPoznań - znajdź ludzi do gry!" />
     <title>SportPoznań</title>
-    <script>
-  // Jeśli nie ma # w adresie, przekieruj do #/
-  if (!window.location.hash) {
-    window.location.replace(window.location.pathname + window.location.search + '#/');
-  }
-</script>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
